Refactored to prevent redundant renders after each email

--- a/src/emails-input.scss
+++ b/src/emails-input.scss
@@ -7,6 +7,7 @@
   display: flex;
   flex-wrap: wrap;
   padding: 3px;
+  min-height: 37px; // This could probably be calculated by the paddings and margins and etc.
 
   &__tag {
     margin: 3px;
