--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,47 @@
 body {
   font-family: 'Open Sans', sans-serif;
 }
+
+.board-share {
+  background: #FFFFFF;
+  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  
+
+  &__title {
+    font-size: 20px;
+    line-height: 27px;
+    letter-spacing: 0px;
+    text-align: left;
+    color: #050038;
+    margin-bottom: 24px; // this should be done by the container rather than each element.
+    &--bold {
+      font-weight: 700;
+    }
+  }
+
+  &__button {
+    background: #4262FF;
+    border-radius: 6px;
+    padding: 8px 16px;
+    font-size: 14px;
+    line-height: 24px;
+    text-align: center;
+    color: #FFFFFF;
+    border: none;
+  }
+
+  &__info {
+    background: #F8F8F7;
+    border-radius: 8px 8px 0px 0px;
+    padding: 32px 50px 24px 50px;
+  }
+
+  &__actions {
+    padding: 24px 50px 32px 50px;
+
+    button + button {
+      margin-left: 16px;
+    }
+  }
+}
