--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,11 @@ body {
 }
 
 .board-share {
+  // for demo
+  width: 540px;
+  margin: auto;
+  margin-top: 300px;
+
   background: #FFFFFF;
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
