--- a/src/emails-input.scss
+++ b/src/emails-input.scss
@@ -1,4 +1,3 @@
-
 // You usually have the sizes and colors and etc. in the variables coming from
 // the design systems rather than randomly typing them in css;
 .emails-input {
@@ -8,10 +7,10 @@
   box-sizing: border-box;
   border-radius: 4px;
   display: flex;
+  align-content: flex-start;
   flex-wrap: wrap;
   padding: 4px 3px;
-  min-height: 37px; // This could probably be calculated by the paddings and margins and etc.
-  max-height: 300px;
+  height: 96px;
   overflow-x: auto;
 
   &__tag {
